--- a/ShutdownTimer/ShutdownTimer/MainWindow.xaml
+++ b/ShutdownTimer/ShutdownTimer/MainWindow.xaml
@@ -5,8 +5,39 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ShutdownTimer"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Shutdown Timer" Height="150" Width="275">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <DockPanel Grid.Column="0" VerticalAlignment="Center" Margin="10">
+                <TextBox Text="" Height="25" Width="50" Name="HoursTextBox" TextAlignment="Center"></TextBox>
+                <Label Content="h"></Label>
+            </DockPanel>
+            <DockPanel Grid.Column="1" VerticalAlignment="Center" Margin="10">
+                <TextBox Text="" Height="25" Width="50" Name="MinutesTextBox" TextAlignment="Center"></TextBox>
+                <Label Content="m"></Label>
+            </DockPanel>
+            <DockPanel Grid.Column="2" VerticalAlignment="Center" Margin="10">
+                <TextBox Text="" Height="25" Width="50" Name="SecondsTextBox" TextAlignment="Center"></TextBox>
+                <Label Content="s"></Label>
+            </DockPanel>
+        </Grid>
+
+        <Grid Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Button Click="Button1_Click" Content="Shutdown" Grid.Column="0" Width="100" Height="25"></Button>
+            <Button Click="Button2_Click" Content="Abort" Grid.Column="1" Width="100" Height="25"></Button>
+        </Grid>
     </Grid>
 </Window>
