--- a/ShutdownTimer/ShutdownTimer/MainWindow.xaml
+++ b/ShutdownTimer/ShutdownTimer/MainWindow.xaml
@@ -4,41 +4,25 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ShutdownTimer"
+        xmlns:viewModels="clr-namespace:ShutdownTimer.ViewModels"
         mc:Ignorable="d"
         Title="Shutdown Timer" Height="150" Width="275">
-    <Window.DataContext><local:MainWindowViewModel></local:MainWindowViewModel></Window.DataContext>
+    <Window.DataContext>
+        <viewModels:MainWindowViewModel></viewModels:MainWindowViewModel>
+    </Window.DataContext>
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-        </Grid.RowDefinitions>
-        <Grid Row="0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-            <DockPanel Grid.Column="0" VerticalAlignment="Center" Margin="10">
-                <TextBox Text="{Binding Hour}" Height="25" Width="50" Name="HoursTextBox" TextAlignment="Center"></TextBox>
-                <Label Content="h"></Label>
-            </DockPanel>
-            <DockPanel Grid.Column="1" VerticalAlignment="Center" Margin="10">
-                <TextBox Text="{Binding Minute}" Height="25" Width="50" Name="MinutesTextBox" TextAlignment="Center"></TextBox>
-                <Label Content="m"></Label>
-            </DockPanel>
-            <DockPanel Grid.Column="2" VerticalAlignment="Center" Margin="10">
-                <TextBox Text="{Binding Second}" Height="25" Width="50" Name="SecondsTextBox" TextAlignment="Center"></TextBox>
-                <Label Content="s"></Label>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"></ColumnDefinition>
+            <ColumnDefinition Width="Auto"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+
+        <Grid Name ="SideBarGrid">
+            <DockPanel HorizontalAlignment="Center" VerticalAlignment="Top">
+                <Button Command="{Binding ChangeMainContentCommand}" Width="25" Height="25" Content="S"></Button>
             </DockPanel>
         </Grid>
-
-        <Grid Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-            <Button Command="{Binding ShutdownCommand}" Content="Shutdown" Grid.Column="0" Width="100" Height="25"></Button>
-            <Button Command="{Binding AbortCommand}" Content="Abort" Grid.Column="1" Width="100" Height="25"></Button>
+        <Grid Name="MainContentGrid" Column="1">
+            <UserControl Content="{Binding CurrentMainContent}"></UserControl>
         </Grid>
     </Grid>
 </Window>
